Build 4251 - 10. 04. 2019
========================================================
ADDED:
 * Sounds for next waypoint

FIX:
 * Corrected compass heading and compass pints sign 


Build 4245 - 09. 04. 2019
========================================================
FIX:
 * Added navigation widgets to configurator
 * Adjusted contrast range

Build 4240 - 18. 03. 2019
========================================================
FIX:
 * USB timing bug #366
 * "Jumpy" vario value #351
 * GPS Heading invalid value protection

CHANGED:
 * IMU and Kalman code replaced 
 * Default sensor calibration values

NOTE:
 * Need to redo sensor calibration

Build 4084 - 25. 02. 2019
========================================================
ADDED:
 * Count odometer during flight, save to log, #357 (bubeck)
 * Alarm 3 as an upper limit #348 (bubeck)

FIX:
 * Waypoint and home navigation
 * Strange buzzing sound
 * Circling detection

CHANGED:
 * Waypoint and home widget
 * Skipped waypoint detail menu

Build 4016 - 24. 07. 2018
========================================================
FIX:
 * IGC altitude bug #346
 * IGC distinguish between 2D/3D fix recording
 
ADDED:
 * IGC record 30 fixes before takeoff
 * Altitude autocalibration #343 (bubeck)
 * Automatic screen cycling #388 (bubeck)
 * Conditional screen switching (beta test)
 * Thermal Time and Gain widgets (beta test)
 * Waypoint navigation #337 (bubeck, beta test)
 
CHANGED:
 * Enhanced font #345 (bubeck)
 * Optimized DrawLine with Bresenham algorithm #338 (bubeck)


Build 3909 - 02. 03. 2018
========================================================
FIX:
 * Altitude alarm

Build 3906 - 20. 02. 2018
========================================================
ADDED:
 * Altitude alarm
 
REMOVED:
 * Experimental logers and protocol (memory saving)

Build 3850 - 18. 10. 2017
========================================================
FIX:
 * Wrong IGC file #308

Build 3836 - 12. 10. 2017
========================================================